--- a/server/views/partials/scripts.ejs
+++ b/server/views/partials/scripts.ejs
@@ -1,2 +1,6 @@
 <script src="/jquery/dist/jquery.js" charset="utf-8"></script>
 <script src="/bootstrap/dist/js/bootstrap.js" charset="utf-8"></script>
+<script src="/angular/angular.js" charset="utf-8"></script>
+<script src="/angular-route/angular-route.js" charset="utf-8"></script>
+<script src="/app/app.module.js" charset="utf-8"></script>
+<script src="/app/app.js" charset="utf-8"></script>
