--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" ng-controller="NavController as vm">
     <div class="container">
 
         <div class="navbar-header">
@@ -9,15 +9,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#" class="navbar-brand"><i class="fa fa-coffee"></i> Coffee Mess</a>
+            <a href="/" class="navbar-brand"><i class="fa fa-coffee"></i> Coffee Mess</a>
         </div>
 
         <div class="collapse navbar-collapse" id="cm-navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"> <a href="#"><i class="fa fa-home"></i> Home<span class="sr-only">(current)</span> </a> </li>
-                <li> <a href="#">About</a> </li>
+                <li ng-class="{active: vm.isActive('/')}"> <a href="/"><i class="fa fa-home"></i> Home<span class="sr-only">(current)</span> </a> </li>
+                <li ng-class="{active: vm.isActive('/about')}"> <a href="/about">About</a> </li>
 
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                <li class="dropdown" ng-hide="vm.currentUser"><a href="#" class="dropdown-toggle" data-toggle="dropdown"
                     role="button" aria-haspopup="true" aria-expanded="false">Login <span class="caret"></span></a>
                     <div class="dropdown-menu">
                         <div class="input-group">
