--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -7,6 +7,7 @@
         <% include ./partials/navbar.ejs %>
         <div ng-view=""></div>
 
+        <% include ./partials/footer.ejs %>
         <% include ./partials/scripts.ejs %>
     </body>
 </html>
