--- a/server/views/partials/scripts.ejs
+++ b/server/views/partials/scripts.ejs
@@ -5,3 +5,4 @@
 <script src="/app/app-module.js" charset="utf-8"></script>
 <script src="/app/app.js" charset="utf-8"></script>
 <script src="/app/nav-controller.js" charset="utf-8"></script>
+<script src="//localhost:9091"></script>
