--- a/server/views/partials/head.ejs
+++ b/server/views/partials/head.ejs
@@ -4,6 +4,6 @@
 <title><%= title %></title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css" media="screen">
+<link rel="stylesheet" href="/css/bootstrap-darkly.css" media="screen">
 <link rel="stylesheet" href="/font-awesome/css/font-awesome.css" media="screen">
 <link rel="stylesheet" href="/css/main.css" media="screen">
