--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -27,7 +27,8 @@
                             <input type="password" class="form-control" placeholder="password">
                         </div>
                         <div class="input-group">
-                            <button class="btn btn-primary" > Submit</button>
+                            <button type="submit" class="btn btn-primary"> Submit</button>
+                            <button type="reset" class="btn btn-default"> Cancel</button>
                         </div>
                     </div>
                 </li>
