--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -32,6 +32,7 @@
                         </div>
                     </div>
                 </li>
+                <li ng-class="{active: vm.isActive('/register')}"> <a href="/register"><i class="fa fa-user-plus"></i> Register</a> </li>
 
             </ul>
         </div>
