--- a/server/views/partials/scripts.ejs
+++ b/server/views/partials/scripts.ejs
@@ -2,7 +2,11 @@
 <script src="/bootstrap/dist/js/bootstrap.js" charset="utf-8"></script>
 <script src="/angular/angular.js" charset="utf-8"></script>
 <script src="/angular-route/angular-route.js" charset="utf-8"></script>
+<script src="/angular-messages/angular-messages.js" charset="utf-8"></script>
+
 <script src="/app/app-module.js" charset="utf-8"></script>
 <script src="/app/app.js" charset="utf-8"></script>
 <script src="/app/nav-controller.js" charset="utf-8"></script>
+<script src="/app/register/compareToDirective.js" charset="utf-8"></script>
+<script src="/app/register/RegistrationController.js" charset="utf-8"></script>
 <script src="//localhost:9091"></script>
