--- a/public/_scss/main.scss
+++ b/public/_scss/main.scss
@@ -36,6 +36,15 @@ nav {
     }
 }
 
+.main-alert {
+    max-width: 400px;
+    margin: 10px auto;
+}
+
+.alert-hidden {
+    visibility: hidden;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
