--- a/server/views/partials/scripts.ejs
+++ b/server/views/partials/scripts.ejs
@@ -6,6 +6,7 @@
 
 <script src="/app/app-module.js" charset="utf-8"></script>
 <script src="/app/app.js" charset="utf-8"></script>
+<script src="/app/core/alertService.js" charset="utf-8"></script>
 <script src="/app/nav-controller.js" charset="utf-8"></script>
 <script src="/app/register/compareToDirective.js" charset="utf-8"></script>
 <script src="/app/register/RegistrationController.js" charset="utf-8"></script>
