--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -9,9 +9,8 @@
     <% include ./partials/navbar.ejs %>
         <div ng-view=""></div>
 
-        <div class="alert alert-{{alert.type}} animated main-alert" ng-class="{'flipInY': alert.show, 'flipOutY': !alert.show, 'alert-hidden': !alert.hasBeenShown}">
+        <div ng-cloak class="alert alert-{{alert.type}} animated main-alert" ng-class="{'flipInY': alert.show, 'flipOutY': !alert.show, 'alert-hidden': !alert.hasBeenShown}">
             <strong>{{alert.title}}</strong> {{alert.message}}
-
         </div>
 
         <% include ./partials/footer.ejs %>
