--- a/api/views/partials/scripts.ejs
+++ b/api/views/partials/scripts.ejs
@@ -9,6 +9,7 @@
 <script src="/app/core/alert.js" charset="utf-8"></script>
 <script src="/app/nav-controller.js" charset="utf-8"></script>
 <script src="/app/auth.js" charset="utf-8"></script>
+<script src="/app/authToken.js" charset="utf-8"></script>
 <script src="/app/register/compareToDirective.js" charset="utf-8"></script>
 <script src="/app/register/RegistrationController.js" charset="utf-8"></script>
 <script src="//localhost:9091"></script>
