Rename/mv core js files to core dir

--- a/api/views/partials/scripts.ejs
+++ b/api/views/partials/scripts.ejs
@@ -7,9 +7,9 @@
 <script src="/app/app-module.js" charset="utf-8"></script>
 <script src="/app/app.js" charset="utf-8"></script>
 <script src="/app/core/alert.js" charset="utf-8"></script>
-<script src="/app/nav-controller.js" charset="utf-8"></script>
-<script src="/app/auth.js" charset="utf-8"></script>
-<script src="/app/authToken.js" charset="utf-8"></script>
+<script src="/app/core/NavController.js" charset="utf-8"></script>
+<script src="/app/core/auth.js" charset="utf-8"></script>
+<script src="/app/core/authToken.js" charset="utf-8"></script>
 <script src="/app/register/compareToDirective.js" charset="utf-8"></script>
 <script src="/app/register/RegistrationController.js" charset="utf-8"></script>
 <script src="//localhost:9091"></script>
