--- a/api/views/index.ejs
+++ b/api/views/index.ejs
@@ -7,8 +7,11 @@
 
 <body ng-app="app">
     <% include ./partials/navbar.ejs %>
-        <div ng-view=""></div>
-
+    <div class="row">
+        <div class="ui-view-container">
+            <div ng-view=""></div>
+        </div>
+    </div>
         <div ng-cloak class="alert alert-{{alert.type}} animated main-alert" ng-class="{'flipInY': alert.show, 'flipOutY': !alert.show, 'alert-hidden': !alert.hasBeenShown}">
             <strong>{{alert.title}}</strong> {{alert.message}}
         </div>
