--- a/api/views/partials/scripts.ejs
+++ b/api/views/partials/scripts.ejs
@@ -2,6 +2,7 @@
 <script src="/bootstrap/dist/js/bootstrap.js" charset="utf-8"></script>
 <script src="/angular/angular.js" charset="utf-8"></script>
 <script src="/angular-route/angular-route.js" charset="utf-8"></script>
+<script src="/angular-animate/angular-animate.js" charset="utf-8"></script>
 <script src="/angular-messages/angular-messages.js" charset="utf-8"></script>
 
 <script src="/app/app-module.js" charset="utf-8"></script>
