--- a/api/views/partials/scripts.ejs
+++ b/api/views/partials/scripts.ejs
@@ -10,6 +10,7 @@
 <script src="/app/core/alert.js" charset="utf-8"></script>
 <script src="/app/core/NavController.js" charset="utf-8"></script>
 <script src="/app/core/auth.js" charset="utf-8"></script>
+<script src="/app/core/authInterceptor.js" charset="utf-8"></script>
 <script src="/app/core/authToken.js" charset="utf-8"></script>
 <script src="/app/register/compareToDirective.js" charset="utf-8"></script>
 <script src="/app/register/RegistrationController.js" charset="utf-8"></script>
