--- a/api/views/index.ejs
+++ b/api/views/index.ejs
@@ -12,12 +12,10 @@
             <div ng-view=""></div>
         </div>
     </div>
-        <div ng-cloak class="alert alert-{{alert.type}} animated main-alert" ng-class="{'flipInY': alert.show, 'flipOutY': !alert.show, 'alert-hidden': !alert.hasBeenShown}">
-            <strong>{{alert.title}}</strong> {{alert.message}}
-        </div>
+    <% include ./partials/alert.ejs %>
 
-        <% include ./partials/footer.ejs %>
-            <% include ./partials/scripts.ejs %>
+    <% include ./partials/footer.ejs %>
+    <% include ./partials/scripts.ejs %>
 </body>
 
 </html>
