--- a/public/_scss/main.scss
+++ b/public/_scss/main.scss
@@ -37,6 +37,10 @@ nav {
 }
 
 .main-alert {
+    position: absolute;
+    top: 70px;
+    left: 5px;
+    right: 5px;
     max-width: 400px;
     margin: 10px auto;
 }
