--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,6 +24,10 @@ nav .dropdown-menu {
     margin-top: 10px; }
 
 .main-alert {
+  position: absolute;
+  top: 70px;
+  left: 5px;
+  right: 5px;
   max-width: 400px;
   margin: 10px auto; }
 
