Add login page view

--- a/public/_scss/main.scss
+++ b/public/_scss/main.scss
@@ -23,7 +23,7 @@ nav {
     }
 }
 
-.form-register {
+.form-register, .form-login {
     max-width: 350px;
     margin: 0 auto;
     .form-control {
