--- a/api/views/partials/scripts.ejs
+++ b/api/views/partials/scripts.ejs
@@ -14,6 +14,7 @@
 <script src="/app/core/authToken.js" charset="utf-8"></script>
 <script src="/app/register/compareToDirective.js" charset="utf-8"></script>
 <script src="/app/register/RegistrationController.js" charset="utf-8"></script>
+<script src="/app/LoginController.js" charset="utf-8"></script>
 <script src="/app/coffee/CoffeeController.js" charset="utf-8"></script>
 <script src="/app/coffee/coffee.js" charset="utf-8"></script>
 <script src="//localhost:9091"></script>
