--- a/api/views/partials/navbar.ejs
+++ b/api/views/partials/navbar.ejs
@@ -15,8 +15,8 @@
         <div class="collapse navbar-collapse" id="cm-navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li ng-class="{active: vm.isActive('/')}"> <a href="/"><i class="fa fa-home"></i> Home<span class="sr-only">(current)</span> </a> </li>
-                <li ng-class="{active: vm.isActive('/about')}"> <a href="/about">About</a></li>
-                <li ng-hide="vm.isAuthenticated()" ng-class="{active: vm.isActive('/login')}"> <a href="/login">Login</a></li>
+                <li ng-class="{active: vm.isActive('/about')}"> <a href="/about"><i class="fa fa-info-circle"></i> About</a></li>
+                <li ng-hide="vm.isAuthenticated()" ng-class="{active: vm.isActive('/login')}"> <a href="/login"><i class="fa fa-sign-in"></i> Login</a></li>
 
                 <%# <li class="dropdown" ng-show="!vm.isAuthenticated()"><a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-controller="LoginController as login"
                     role="button" aria-haspopup="true" aria-expanded="false">Login <span class="caret"></span></a>
@@ -34,7 +34,7 @@
                     </div>
                 </li>%>
                 <li ng-hide="vm.isAuthenticated()" ng-class="{active: vm.isActive('/register')}"> <a href="/register"><i class="fa fa-user-plus"></i> Register</a> </li>
-                <li ng-show="vm.isAuthenticated()" ng-click="vm.logout()"><a href="#">Log out</a></li>
+                <li ng-show="vm.isAuthenticated()" ng-click="vm.logout()"><a href="#"><i class="fa fa-sign-out"></i> Log out</a></li>
 
             </ul>
         </div>
