--- a/api/views/partials/scripts.ejs
+++ b/api/views/partials/scripts.ejs
@@ -4,6 +4,7 @@
 <script src="/angular-route/angular-route.js" charset="utf-8"></script>
 <script src="/angular-animate/angular-animate.js" charset="utf-8"></script>
 <script src="/angular-messages/angular-messages.js" charset="utf-8"></script>
+<script src="/satellizer/satellizer.js" charset="utf-8"></script>
 
 <script src="/app/app-module.js" charset="utf-8"></script>
 <script src="/app/app.js" charset="utf-8"></script>
