Add styles to match site theme

--- a/api/views/emailVerification.html
+++ b/api/views/emailVerification.html
@@ -6,6 +6,8 @@
         <style type="text/css">
             body {
                 font-family: "Arial";
+                color: #ffffff;
+                background-color: #222222;
             }
 
             p {
@@ -24,8 +26,15 @@
             .btn-wide {
                 width: 100%;
                 height: 50px;
-                background-color: navy;
-                color: white;
+                color: #ffffff;
+                background-color: #375a7f;
+                border-color: #375a7f;
+            }
+
+            .btn-wide:hover {
+                color: #ffffff;
+                background-color: #28415b;
+                border-color: #253c54;
             }
 
             .text-center {
