--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,6 +23,17 @@ nav .dropdown-menu {
     border-radius: 0;
     margin-top: 10px; }
 
+.form-addCoffee {
+  max-width: 550px;
+  margin: 0 auto; }
+  .form-addCoffee .form-control {
+    border-radius: 0;
+    border-bottom: 1px solid #ccc; }
+  .form-addCoffee button {
+    border-radius: 0;
+    margin-top: 10px;
+    margin-bottom: 10px; }
+
 .main-alert {
   position: absolute;
   top: 70px;
