Continue work on coffee details controller

--- a/api/views/partials/scripts.ejs
+++ b/api/views/partials/scripts.ejs
@@ -17,5 +17,6 @@
 <script src="/app/register/RegistrationController.js" charset="utf-8"></script>
 <script src="/app/LoginController.js" charset="utf-8"></script>
 <script src="/app/coffee/CoffeeController.js" charset="utf-8"></script>
+<script src="/app/coffee/CoffeeDetailsController.js" charset="utf-8"></script>
 <script src="/app/coffee/coffee.js" charset="utf-8"></script>
 <script src="//localhost:9091"></script>
